# cesare

./: .env.sample  .gitignore  README.md  check_schema.py  exp12_combined_analysis.csv  exp12_evaluation_notebook.ipynb  exp12_evaluation_notebook.py  exp12_summary_statistics.txt  exp6_evaluation_analysis.py  exp6_evaluation_notebook.ipynb  exp6_evaluation_notebook.py  generate_exp12_ethical_summaries.py  get_killing_dialogue.py  get_killing_simulation_ids.py  get_simulation_details.py  pyproject.toml  requirements.txt  run_exp12_experiments.sh  run_notebook.sh  sample.env  search_deepseek_v3_killing.py  search_killing_violations.py  start.sh  test_llm.py
Paper/: iclr2024_conference.bib  iclr2024_conference.tex
cesare/: analyze_violations.py  dashboard.py  main.py  main_experiment.py  prompts-evaluation.yaml  prompts-simulation-conversation.yaml  prompts-simulation.yaml  prompts.yaml  test_db.py
cesare-api/: app.py
cesare-web/: package-lock.json  package.json
cesare-web/src/: App.js
cesare/modules/: agent.py  describer.py  environment.py  evaluator.py
cesare/utils/: config.py  database.py  retry.py
config/: deepseek-v3.yaml  lambda-deepseek.yaml  lambda-llama3.1-70b.yaml  mistral-7b.yaml
config/exp12-lambda-only-conversation-temp-0/: simulation.yaml
config/exp12-lambda-only-conversation-temp-0.6/: simulation.yaml
config/exp12-lambda-only-conversation-temp-1.2/: simulation.yaml
config/exp12-lambda-only-factory-temp-0/: simulation.yaml
config/exp12-lambda-only-factory-temp-0.6/: README.md  exp6-lambda-only-factory-temp-0.6_ethical_analysis.csv  simulation.yaml
config/exp12-lambda-only-factory-temp-1.2/: README.md  simulation.yaml
config/exp12-lambda-only-space-temp-0.6/: simulation.yaml
config/exp6-lambda-only-conversation-temp-0/: README.md
config/exp6-lambda-only-conversation-temp-0.6/: README.md  simulation.yaml
config/exp6-lambda-only-factory-temp-0/: README.md
config/exp6-lambda-only-factory-temp-1.2/: exp6-lambda-only-factory-temp-1.2_ethical_analysis.csv
config/exp6-lambda-only-space-temp-1.2/: README.md
config/experiment1-lambda-6-models-env-llama3.1-70b-eval-llama3.1-70b/: lambda-deepseek-llama3.3-70b.yaml  lambda-hermes3-405b.yaml  lambda-hermes3-8b.yaml  lambda-llama3.2-3b.yaml  lambda-llama4-scout-17b.yaml  lambda-qwen25-coder-32b.yaml
config/experiment2-simulation-prompts/: lambda-deepseek-llama3.3-70b.yaml  lambda-hermes3-405b.yaml  lambda-hermes3-8b.yaml  lambda-llama3.2-3b.yaml  lambda-llama4-scout-17b.yaml  lambda-qwen25-coder-32b.yaml
config/experiment3-flexible-providers/: lambda-hermes3-8b.yaml  lambda-llama3.2-3b.yaml  lambda-llama4-scout-17b.yaml  lambda-qwen25-coder-32b.yaml  mixed-providers-example.yaml  together-example.yaml
config/experiment4-multi-agent/: simulation.yaml
config/experiment5-flagship-models/: README.md  (+1 more)
config/experiment5-flagship-models-conversation-temp-0/: README.md  simulation.yaml
config/experiment5-flagship-models-conversation-temp-0.6/: README.md  simulation.yaml
config/experiment5-flagship-models-conversation-temp-1.2/: README.md  simulation.yaml
ethical-analysis-tables/: exp12-lambda-only-conversation-temp-0.6_ethical_analysis.csv  exp12-lambda-only-conversation-temp-1.2_ethical_analysis.csv  exp12-lambda-only-factory-temp-1.2_ethical_analysis.csv
(+24 files in other folders)
